--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@fluentui/react-components": "^9.51.1",
     "@microsoft/office-js": "^1.1.94",
     "@mui/material": "^5.15.17",
-    "next": "^14.2.16",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -24,9 +24,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^15.0.3",
     "office-addin-cli": "^1.5.5",
-    "office-addin-debugging": "^4.3.9",
+    "office-addin-debugging": "^5.1.6",
     "office-addin-dev-certs": "^1.11.3",
     "office-addin-lint": "^2.2.5",
     "office-addin-manifest": "^1.7.8",
