--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
