--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18n": "^0.15.1",
     "next": "^15.0.3",
     "next-intl": "^3.26.0",
+    "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
