--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,8 +1,26 @@
 name: woide
 services:
-  frontend:
+  woide:
     container_name: WOIDE-II
     build: .
     command: npm run start
     ports:
       - "3050:3000"
+    networks:
+      - woide
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/cert.pem:/etc/nginx/ssl/cert.pem:ro
+      - ./nginx/key.pem:/etc/nginx/ssl/key.pem:ro
+    depends_on:
+      - woide
+    networks:
+      - woide
+networks:
+  woide:
+    name: "woide"
