--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
