--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
