--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^15.3.1",
     "next-intl": "^3.26.0",
     "notistack": "^3.0.2",
+    "porter2": "^1.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
