--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@monaco-editor/react": "^4.7.0",
     "@mui/material": "^5.15.17",
     "i18n": "^0.15.1",
+    "lodash": "^4.17.21",
     "mustache": "^4.2.0",
     "next": "^15.3.1",
     "next-intl": "^3.26.0",
